--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Font Gloria Hallelujah -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Poppins:ital,wght@0,100;0,200;0,400;1,100;1,200;1,300&family=Sora:wght@600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Font Roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Poppins:ital,wght@0,100;0,200;0,400;1,100;1,200;1,300&family=Sora:wght@600;700;800&display=swap"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
